--- a/sites/all/themes/gxnulib/sass/components/forms/_forms.scss
+++ b/sites/all/themes/gxnulib/sass/components/forms/_forms.scss
@@ -42,5 +42,10 @@ and open the template in the editor.
                 display: inline-block;
             }
         }
+        
+        ol {
+            padding: 0;
+            margin: 0;
+        }
     }
 }
