--- a/sites/all/themes/gxnulib/css/layouts/sword-front/sword-front.layout.css
+++ b/sites/all/themes/gxnulib/css/layouts/sword-front/sword-front.layout.css
@@ -82,7 +82,7 @@ and open the template in the editor.
     clear: none; }
 
   /* line 67, ../../../sass/layouts/sword-front/sword-front.layout.scss */
-  .l-region--sidebar-first {
+  .l-region--stacked-left {
     width: 31.91489%;
     float: left;
     margin-right: -100%;
@@ -90,28 +90,22 @@ and open the template in the editor.
     clear: none; }
 
   /* line 71, ../../../sass/layouts/sword-front/sword-front.layout.scss */
-  .l-region--sidebar-second {
-    width: 65.95745%;
+  .l-region--stacked-middle {
+    width: 31.91489%;
+    float: left;
+    margin-right: -100%;
+    margin-left: 34.04255%;
+    clear: none; }
+
+  /* line 75, ../../../sass/layouts/sword-front/sword-front.layout.scss */
+  .l-region--stacked-right {
+    width: 31.91489%;
     float: right;
     margin-left: 0;
     margin-right: 0;
     clear: none; }
-    /* line 74, ../../../sass/layouts/sword-front/sword-front.layout.scss */
-    .l-region--sidebar-second .block--quicktabs-resource-service-tabs {
-      width: 48.93617%;
-      float: left;
-      margin-right: -100%;
-      margin-left: 0;
-      clear: none; }
-    /* line 78, ../../../sass/layouts/sword-front/sword-front.layout.scss */
-    .l-region--sidebar-second .block--quicktabs-news-tabs {
-      width: 48.93617%;
-      float: right;
-      margin-left: 0;
-      margin-right: 0;
-      clear: none; }
 
-  /* line 84, ../../../sass/layouts/sword-front/sword-front.layout.scss */
+  /* line 80, ../../../sass/layouts/sword-front/sword-front.layout.scss */
   .l-region--footer .block {
     display: inline-block;
     vertical-align: middle;
@@ -120,10 +114,10 @@ and open the template in the editor.
     *display: inline;
     width: 33.33333%;
     float: left; }
-    /* line 85, ../../../sass/layouts/sword-front/sword-front.layout.scss */
+    /* line 81, ../../../sass/layouts/sword-front/sword-front.layout.scss */
     .l-region--footer .block .block__title {
       padding-left: 0; }
-    /* line 89, ../../../sass/layouts/sword-front/sword-front.layout.scss */
+    /* line 85, ../../../sass/layouts/sword-front/sword-front.layout.scss */
     .l-region--footer .block .field__item {
       display: inline-block;
       vertical-align: middle;
