--- a/sites/all/themes/gxnulib/sass/components/tabs/_search-tab.scss
+++ b/sites/all/themes/gxnulib/sass/components/tabs/_search-tab.scss
@@ -22,13 +22,14 @@ and open the template in the editor.
             background: $tab-menu-link-bgcolor;
             margin: 0 auto;
             padding: $spacing 0;
-            width: (100% / 5);
+            width: (100% / 6);
             text-align: center;
             float: left;
             @include inline-block;
             @include pie-clearfix;
             cursor: pointer;
             height: 40px;
+            border-right: 1px solid lighten($tab-menu-link-bgcolor, 30%);
             
             a {
                 display: block;
@@ -47,9 +48,7 @@ and open the template in the editor.
             }
             &:last-child {
                 @include border-top-right-radius($radius);
-                a {
-                    border-right: none;
-                }
+                border-right: none;
             }
 
             &.active {
