添加登录框

--- a/sites/all/themes/gxnulib/css/layouts/sword-front/sword-front.layout.css
+++ b/sites/all/themes/gxnulib/css/layouts/sword-front/sword-front.layout.css
@@ -28,23 +28,30 @@ and open the template in the editor.
   margin: 1.5em 0; }
 
 /* line 31, ../../../sass/layouts/sword-front/sword-front.layout.scss */
+.l-bar {
+  padding: 0.5em 1em;
+  margin: 0 auto;
+  background: #494f57;
+  text-align: right; }
+
+/* line 38, ../../../sass/layouts/sword-front/sword-front.layout.scss */
 .l-heading {
   width: 100%;
   -moz-border-radius: 4px;
   -webkit-border-radius: 4px;
   border-radius: 4px; }
 
-/* line 36, ../../../sass/layouts/sword-front/sword-front.layout.scss */
+/* line 43, ../../../sass/layouts/sword-front/sword-front.layout.scss */
 .l-branding {
   position: relative; }
 
-/* line 40, ../../../sass/layouts/sword-front/sword-front.layout.scss */
+/* line 47, ../../../sass/layouts/sword-front/sword-front.layout.scss */
 .wrapper--heading {
   background: rgba(142, 150, 160, 0.75);
   padding-top: 1.5em; }
 
 @media (min-width: 70em) {
-  /* line 46, ../../../sass/layouts/sword-front/sword-front.layout.scss */
+  /* line 53, ../../../sass/layouts/sword-front/sword-front.layout.scss */
   .site-branding {
     width: 48.93617%;
     float: left;
@@ -54,7 +61,7 @@ and open the template in the editor.
     padding-top: 0.5em;
     padding-bottom: 0.5em; }
 
-  /* line 52, ../../../sass/layouts/sword-front/sword-front.layout.scss */
+  /* line 59, ../../../sass/layouts/sword-front/sword-front.layout.scss */
   .l-region--navigation {
     width: 48.93617%;
     float: right;
@@ -65,7 +72,7 @@ and open the template in the editor.
     right: 0;
     bottom: 0; }
 
-  /* line 59, ../../../sass/layouts/sword-front/sword-front.layout.scss */
+  /* line 66, ../../../sass/layouts/sword-front/sword-front.layout.scss */
   .l-region--search-tab {
     width: 48.93617%;
     float: left;
@@ -73,7 +80,7 @@ and open the template in the editor.
     margin-left: 0;
     clear: none; }
 
-  /* line 63, ../../../sass/layouts/sword-front/sword-front.layout.scss */
+  /* line 70, ../../../sass/layouts/sword-front/sword-front.layout.scss */
   .l-region--showcase {
     width: 48.93617%;
     float: right;
@@ -81,7 +88,7 @@ and open the template in the editor.
     margin-right: 0;
     clear: none; }
 
-  /* line 67, ../../../sass/layouts/sword-front/sword-front.layout.scss */
+  /* line 74, ../../../sass/layouts/sword-front/sword-front.layout.scss */
   .l-region--stacked-left {
     width: 31.91489%;
     float: left;
@@ -89,7 +96,7 @@ and open the template in the editor.
     margin-left: 0;
     clear: none; }
 
-  /* line 71, ../../../sass/layouts/sword-front/sword-front.layout.scss */
+  /* line 78, ../../../sass/layouts/sword-front/sword-front.layout.scss */
   .l-region--stacked-middle {
     width: 31.91489%;
     float: left;
@@ -97,7 +104,7 @@ and open the template in the editor.
     margin-left: 34.04255%;
     clear: none; }
 
-  /* line 75, ../../../sass/layouts/sword-front/sword-front.layout.scss */
+  /* line 82, ../../../sass/layouts/sword-front/sword-front.layout.scss */
   .l-region--stacked-right {
     width: 31.91489%;
     float: right;
@@ -105,7 +112,7 @@ and open the template in the editor.
     margin-right: 0;
     clear: none; }
 
-  /* line 80, ../../../sass/layouts/sword-front/sword-front.layout.scss */
+  /* line 87, ../../../sass/layouts/sword-front/sword-front.layout.scss */
   .l-region--footer .block {
     display: inline-block;
     vertical-align: middle;
@@ -114,10 +121,10 @@ and open the template in the editor.
     *display: inline;
     width: 33.33333%;
     float: left; }
-    /* line 81, ../../../sass/layouts/sword-front/sword-front.layout.scss */
+    /* line 88, ../../../sass/layouts/sword-front/sword-front.layout.scss */
     .l-region--footer .block .block__title {
       padding-left: 0; }
-    /* line 85, ../../../sass/layouts/sword-front/sword-front.layout.scss */
+    /* line 92, ../../../sass/layouts/sword-front/sword-front.layout.scss */
     .l-region--footer .block .field__item {
       display: inline-block;
       vertical-align: middle;
