--- a/sites/all/themes/gxnulib/css/gxnulib.styles.css
+++ b/sites/all/themes/gxnulib/css/gxnulib.styles.css
@@ -517,6 +517,19 @@ To change this template file, choose Tools | Templates
 and open the template in the editor.
 */
 /* 
+    Created on : Jun 4, 2015, 4:08:19 PM
+    Author     : Stephen
+*/
+/* line 11, ../sass/components/forms/_bar-form.scss */
+.l-bar input, .l-bar select {
+  margin: 0 0.5em; }
+
+/*
+To change this license header, choose License Headers in Project Properties.
+To change this template file, choose Tools | Templates
+and open the template in the editor.
+*/
+/* 
     Created on : Apr 16, 2015, 5:06:46 PM
     Author     : Stephen
 */
