--- a/sites/all/themes/gxnulib/css/layouts/sword-front/sword-front.layout.no-query.css
+++ b/sites/all/themes/gxnulib/css/layouts/sword-front/sword-front.layout.no-query.css
@@ -28,17 +28,24 @@ and open the template in the editor.
   margin: 1.5em 0; }
 
 /* line 31, ../../../sass/layouts/sword-front/sword-front.layout.scss */
+.l-bar {
+  padding: 0.5em 1em;
+  margin: 0 auto;
+  background: #494f57;
+  text-align: right; }
+
+/* line 38, ../../../sass/layouts/sword-front/sword-front.layout.scss */
 .l-heading {
   width: 100%;
   -moz-border-radius: 4px;
   -webkit-border-radius: 4px;
   border-radius: 4px; }
 
-/* line 36, ../../../sass/layouts/sword-front/sword-front.layout.scss */
+/* line 43, ../../../sass/layouts/sword-front/sword-front.layout.scss */
 .l-branding {
   position: relative; }
 
-/* line 40, ../../../sass/layouts/sword-front/sword-front.layout.scss */
+/* line 47, ../../../sass/layouts/sword-front/sword-front.layout.scss */
 .wrapper--heading {
   background: rgba(142, 150, 160, 0.75);
   padding-top: 1.5em; }
