--- a/sites/all/themes/gxnulib/sass/variables/_colors.scss
+++ b/sites/all/themes/gxnulib/sass/variables/_colors.scss
@@ -13,6 +13,8 @@ $link-focus-color: $link-hover-color;
 $border-color: #f0f0f0;
 $footer-bgcolor: darken($bgcolor, 5%);
 
+$bar-bgcolor: #494f57;
+
 $branding-bgcolor: #494f57;
 $branding-border-color: $link-color;
 
